@@ -1,3 +1,7 @@
+2021-03-16  Antonio Ceballos  <aceballos@gmail.com>
+
+	* Fix frontend wrongly stripping engine output in UCI mode
+
 2021-01-08  Antonio Ceballos  <aceballos@gmail.com>
 
 	* Do not modify stdin/stdout buffering from adapter thread
